Spinner structure created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">app.HolaMundo</string>
+
+    <string name="itemFrappses">Categorías Frappses</string>
+    <string name="itemAgradecimiento">Agradecimiento</string>
+    <string name="itemAmor">Amor</string>
+    <string name="itemNewYear">Año nuevo</string>
+    <string name="itemCanciones">Canciones</string>
+
+    <string name="msgFrappses">Desplegar</string>
+    <string name="msgAgradecimiento">Prueba dar las graciasj</string>
+    <string name="msgAmor">Enamora con estas frases</string>
+    <string name="msgNewYear">Felicita el año nuevo</string>
+    <string name="msgCanciones">Escucha solo lo mejor</string>
+    <string name="msgSeleccionado">Se ha seleccionado</string>
+
+    <string name="spDescripcion">Seleccione una categoría</string>
+
 </resources>
