--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="itemCanciones">Canciones</string>
 
     <string name="msgFrappses">Desplegar</string>
-    <string name="msgAgradecimiento">Prueba dar las graciasj</string>
+    <string name="msgAgradecimiento">Prueba dar las gracias</string>
     <string name="msgAmor">Enamora con estas frases</string>
     <string name="msgNewYear">Felicita el año nuevo</string>
     <string name="msgCanciones">Escucha solo lo mejor</string>
